geo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geo
spec:
  type: LoadBalancer
  selector:
    app: geo
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
