keptn-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keptn
  namespace: keptn
spec:
  type: LoadBalancer
  selector:
    app: api-gateway-nginx
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 8080
