geo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  rules:
  - http:
      paths:
      - path:
        pathType: Prefix
        backend:
          service:
            name: geo-service
            port: 
              number: 3000
        path: /static(/|$)(.*)
