keptn-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: api-ingress
  namespace: keptn
spec:
  tls:
    - hosts:
        - main
      secretName: sslcerts
  rules:
    - host: api.keptn.main
      http:
        paths:
          - path: /
            backend:
              serviceName: api
              servicePort: 443
    - host: api.keptn
      http:
        paths:
          - path: /
            backend:
              serviceName: api
              servicePort: 443
    - host: bridge.keptn.main
      http:
        paths:
          - path: /
            backend:
              serviceName: bridge
              servicePort: 8080
    - host: bridge.keptn
      http:
        paths:
          - path: /
            backend:
              serviceName: bridge
              servicePort: 8080
